--- a/index.html
+++ b/index.html
@@ -24,24 +24,28 @@
                 <!-- OVERVIEW -->
                 <section id="about" class= "section-content">
                     <h1 class ="section-header">OVERVIEW</h1>
-                    <p class= "p-content">STOP! Don't panic. The Asian Giant Hornet, aka "Murder Hornet", aka "The Hornet from Hell" is not actually from Hell, but rather comes from East Asian countries, the most prominent being the great country of Japan (and yes they still have honey bees and some of the most beautiful flowers on the planet. The second myth that is simply not true is that the hornet is a "murderer," being that "to murder" simply implies... The Asian Giant Hornet is simply another insect and has a share in this world just like any other animal. Yes its big. Yes its kinda scary from the outset, but we could show you images and pictures of other animals that would make this bad boy look like Olaf from frozen. What we need to do is undertstand this animal, only then can we... </p>
+                    <p class= "p-content">This is your one-stop source for everything you need to know concerning the Asian Giant Hornet, aka the "Murder Hornet", aka "The Hornet from Hell".</p>
                 </section>
                 <!-- QUESTIONS -->
                 <section id="about" class= "section-content">
                     <h1 class ="section-header">WHAT ARE THEY?</h1>
-                    <p class= "p-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p class= "p-content">The Asian Giant Hornet, aka the "Murder Hornet", aka "The Hornet from Hell" is not actually from Hell, but rather comes from East Asian countries, the most prominent being the great country of Japan.</p>
                 </section>
                 <section id="about" class= "section-content">
                     <h1 class ="section-header">WHERE DO THEY COME FROM?</h1>
-                    <p class= "p-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p class= "p-content">They come from eastern countries in Asia with the most prominent country being Japan (and yes, Japan still has honeybees and some of the most beautiful flowers on earth).</p>
                 </section>
                 <section id="about" class= "section-content">
                     <h1 class ="section-header">ARE THEY DANGEROUS?</h1>
-                    <p class= "p-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p class= "p-content">They can sting! Yet, contrary to what you will hear on apocalyptic news outlets, they are not the plague fortold in Revelation 9. In fact, they have been around for a long time and humans have always found ways to coexist with them.</p>
                 </section>
                 <section id="about" class= "section-content">
                     <h1 class ="section-header">SHOULD I BE WORRIED?</h1>
-                    <p class= "p-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p class= "p-content">YES and NO. YES--because this is considered an invasive species to North America and these hornets could potentially do drastic damage to various facets our ecosystem (e.g. honeybees, flora, etc.). NO--because they will not replace human beings as the alpha predator on earth.</p>
+                </section>
+                <section id="about" class= "section-content">
+                    <h1 class ="section-header">WHAT IF I GET STUNG?</h1>
+                    <p class= "p-content">OUCH! </p>
                 </section>
             </div>
 
