--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
                 <!-- QUESTIONS -->
                 <section id="about" class= "section-content">
                     <h1 class ="section-header">WHAT ARE THEY?</h1>
-                    <p class= "p-content">The Asian Giant Hornet, aka the "Murder Hornet", aka "The Hornet from Hell" is not actually from Hell, but rather comes from East Asian countries, the most prominent being the great country of Japan.</p>
+                    <p class= "p-content">The Asian Giant Hornet (<span class= "italics">Vespa mandarinia</span>), aka the "Murder Hornet", aka "The Hornet from Hell" is the world's largest hornet.</p>
                 </section>
                 <section id="about" class= "section-content">
                     <h1 class ="section-header">WHERE DO THEY COME FROM?</h1>
-                    <p class= "p-content">They come from eastern countries in Asia with the most prominent country being Japan (and yes, Japan still has honeybees and some of the most beautiful flowers on earth).</p>
+                    <p class= "p-content">They are native to temperate and tropical East Asia, South Asia, Mainland Southeast Asia, and a few regions in the easternmost part of Russia. They prefer to live in low mountainous regions and forests, while completely avoiding plains and high climates.</p>
                 </section>
                 <section id="about" class= "section-content">
                     <h1 class ="section-header">ARE THEY DANGEROUS?</h1>
@@ -41,11 +41,15 @@
                 </section>
                 <section id="about" class= "section-content">
                     <h1 class ="section-header">SHOULD I BE WORRIED?</h1>
-                    <p class= "p-content">YES and NO. YES--because this is considered an invasive species to North America and these hornets could potentially do drastic damage to various facets our ecosystem (e.g. honeybees, flora, etc.). NO--because they will not replace human beings as the alpha predator on earth.</p>
+                    <p class= "p-content">YES and NO. YES--because this is considered an invasive species to North America and these hornets could potentially do drastic damage to various facets our ecosystem (e.g. honeybees, flora, etc.). NO--because they will not replace human beings as the apex species on earth.</p>
                 </section>
                 <section id="about" class= "section-content">
                     <h1 class ="section-header">WHAT IF I GET STUNG?</h1>
-                    <p class= "p-content">OUCH! </p>
+                    <p class= "p-content">OUCH! Quickly make your way safely to the nearest hospital or urgent care clinic. If you cannot physically get to a hospital or clinic then call 911 immediately!</p>
+                </section>
+                <section id="about" class= "section-content">
+                    <h1 class ="section-header">HOW DO I AVOID THEM?</h1>
+                    <p class= "p-content">Migration...</p>
                 </section>
             </div>
 
